--- a/Bomberman/Bomberman/Bomberman.csproj
+++ b/Bomberman/Bomberman/Bomberman.csproj
@@ -55,7 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Model\MapObject\BrickBlock.cs" />
+    <Compile Include="Model\Detonator.cs" />
+    <Compile Include="Model\Field.cs" />
+    <Compile Include="Model\IBomb.cs" />
+    <Compile Include="Model\ImageSources.cs" />
+    <Compile Include="Model\IntPoint.cs" />
+    <Compile Include="Model\MapObjects\BrickBlock.cs" />
+    <Compile Include="Model\MapObjects\RegularBomb.cs" />
+    <Compile Include="Model\MapObjects\HumanPlayer.cs" />
+    <Compile Include="Model\IPlayer.cs" />
     <Compile Include="Scenarios\Scenario.cs" />
     <Compile Include="Scenarios\Test.cs" />
     <Page Include="MainWindow.xaml">
@@ -72,7 +80,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\MapObject\MapObject.cs" />
+    <Compile Include="Model\MapObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -106,10 +114,30 @@
     <Resource Include="Assets\background\wood.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\MapObject\NULL.png" />
+    <Resource Include="Assets\MapObject\Null.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\MapObject\Brick_Block.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MapObject\Troll.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MapObject\BomberMan.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MapObject\Bomb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MapObject\BomberManDead.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\MapObject\dota2.png" />
+    <Resource Include="Assets\MapObject\cheburashka.jpg" />
+    <Content Include="Assets\music\AA1.mp3" />
+    <Content Include="Assets\music\gimn.mp3" />
+    <Content Include="Assets\music\explode.mp3" />
+    <Content Include="Assets\music\AA2.mp3" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
